--- a/DecksStorage/App.config
+++ b/DecksStorage/App.config
@@ -13,6 +13,15 @@
             <setting name="Decks" serializeAs="String">
                 <value />
             </setting>
+            <setting name="MFState" serializeAs="String">
+                <value>Normal</value>
+            </setting>
+            <setting name="MFLocation" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
+            <setting name="MFSize" serializeAs="String">
+                <value>0, 0</value>
+            </setting>
         </DecksStorage.Properties.Settings>
     </userSettings>
 </configuration>
