--- a/DecksStorage/DecksStorage.csproj
+++ b/DecksStorage/DecksStorage.csproj
@@ -126,6 +126,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="h.ico" />
+    <Content Include="readme\Main.png" />
+    <Content Include="readme\New.png" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
