--- a/DecksStorage/DecksStorage.csproj
+++ b/DecksStorage/DecksStorage.csproj
@@ -129,7 +129,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="h.ico" />
-    <Content Include="readme\Main.png" />
+    <Content Include="readme\Main2.png" />
     <Content Include="readme\New.png" />
   </ItemGroup>
   <ItemGroup>
