更換資料儲存方式

--- a/DecksStorage/DecksStorage.csproj
+++ b/DecksStorage/DecksStorage.csproj
@@ -74,7 +74,8 @@
     <Compile Include="CreateForm.Designer.cs">
       <DependentUpon>CreateForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataHelper.cs" />
+    <Compile Include="Data\DataHelper.cs" />
+    <Compile Include="Data\UserData.cs" />
     <Compile Include="EditForm.cs">
       <SubType>Form</SubType>
     </Compile>
