--- a/DecksStorage/DecksStorage.csproj
+++ b/DecksStorage/DecksStorage.csproj
@@ -75,6 +75,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AuthResizeFormTool.cs" />
+    <Compile Include="YesNoBox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="YesNoBox.Designer.cs">
+      <DependentUpon>YesNoBox.cs</DependentUpon>
+    </Compile>
     <Compile Include="CreateForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +111,9 @@
       <DependentUpon>ReplaceForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
+    <EmbeddedResource Include="YesNoBox.resx">
+      <DependentUpon>YesNoBox.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="CreateForm.resx">
       <DependentUpon>CreateForm.cs</DependentUpon>
     </EmbeddedResource>
