--- a/DecksStorage/DecksStorage.csproj
+++ b/DecksStorage/DecksStorage.csproj
@@ -74,53 +74,53 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AuthResizeFormTool.cs" />
-    <Compile Include="YesNoBox.cs">
+    <Compile Include="Tools\AuthResizeFormTool.cs" />
+    <Compile Include="Forms\YesNoBox.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="YesNoBox.Designer.cs">
+    <Compile Include="Forms\YesNoBox.Designer.cs">
       <DependentUpon>YesNoBox.cs</DependentUpon>
     </Compile>
-    <Compile Include="CreateForm.cs">
+    <Compile Include="Forms\CreateForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="CreateForm.Designer.cs">
+    <Compile Include="Forms\CreateForm.Designer.cs">
       <DependentUpon>CreateForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Data\DataHelper.cs" />
     <Compile Include="Data\UserData.cs" />
-    <Compile Include="EditForm.cs">
+    <Compile Include="Forms\EditForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="EditForm.Designer.cs">
+    <Compile Include="Forms\EditForm.Designer.cs">
       <DependentUpon>EditForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="MainForm.cs">
+    <Compile Include="Forms\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MainForm.Designer.cs">
+    <Compile Include="Forms\MainForm.Designer.cs">
       <DependentUpon>MainForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\Deck.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReplaceForm.cs">
+    <Compile Include="Forms\ReplaceForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ReplaceForm.Designer.cs">
+    <Compile Include="Forms\ReplaceForm.Designer.cs">
       <DependentUpon>ReplaceForm.cs</DependentUpon>
     </Compile>
     <Compile Include="Settings.cs" />
-    <EmbeddedResource Include="YesNoBox.resx">
+    <EmbeddedResource Include="Forms\YesNoBox.resx">
       <DependentUpon>YesNoBox.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="CreateForm.resx">
+    <EmbeddedResource Include="Forms\CreateForm.resx">
       <DependentUpon>CreateForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="EditForm.resx">
+    <EmbeddedResource Include="Forms\EditForm.resx">
       <DependentUpon>EditForm.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="MainForm.resx">
+    <EmbeddedResource Include="Forms\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -133,7 +133,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="ReplaceForm.resx">
+    <EmbeddedResource Include="Forms\ReplaceForm.resx">
       <DependentUpon>ReplaceForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="default_decks\雙開解任務%28190129%29 by 偶然經過的旅人.ds">
@@ -155,8 +155,8 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="h.ico" />
-    <Content Include="readme\Main2.png" />
+    <None Include="h.ico" />
+    <None Include="readme\Main2.png" />
     <Content Include="readme\New.png" />
   </ItemGroup>
   <ItemGroup>
